--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "pkg . --out-path bin"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,11 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mariadb": "^3.1.1"
+  },
+  "pkg": {
+    "scripts": "*.js",
+    "targets": [
+      "node12-win-x64"
+    ]
   }
 }
